# AI-Nutritionist

./: .env.example  .gitignore  README.md  pyproject.toml  t projectgit branch -M main
backend/: main.py
backend/core/: config.py  database.py  llm_client.py  models.py  rag_engine.py  schemas.py  vector_store.py
backend/routers/: agent.py  meal_plan.py  preferences.py  users.py
backend/scripts/: seed_data.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/views/: Chat.vue  Dashboard.vue  Health.vue  MealPlan.vue  Preferences.vue
